--- a/public/422.html
+++ b/public/422.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>程序访问被拒绝(422)</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,8 +19,9 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1>程序访问被拒绝.</h1>
+    <img src="/assets/logo.gif" alt="红宝石信息技术网"/>
+    <p>请返回<a href="/">首页</a>, 或联系<a htef="mailto:master@inruby.com">管理员</a>.</p>
   </div>
 </body>
 </html>
