--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="Content-Language" content="zh-cn" />
+  <meta name="robots" content="all" />
+  <meta name="author" content="inruby.com" />
+  <title>程序服务器出错(500)</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,7 +23,9 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>程序服务器出错了.</h1>
+    <img src="/assets/logo.png" alt="红宝石信息技术网"/>
+    <p>请返回<a href="/">首页</a>, 或联系<a htef="mailto:master@inruby.com">管理员</a>.</p>
   </div>
 </body>
 </html>
