--- a/public/500.html
+++ b/public/500.html
@@ -2,9 +2,8 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta http-equiv="Content-Language" content="zh-cn" />
+  <meta http-equiv="Content-Language" content="zh-CN" />
   <meta name="robots" content="all" />
-  <meta name="author" content="inruby.com" />
   <title>程序服务器出错(500)</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
@@ -12,20 +11,14 @@
       width: 25em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
     }
     h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
   </style>
 </head>
 
 <body>
-  <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>程序服务器出错了.</h1>
-    <img src="/assets/logo.png" alt="红宝石信息技术网"/>
-    <p>请返回<a href="/">首页</a>, 或联系<a htef="mailto:master@inruby.com">管理员</a>.</p>
+    <a href="/"><img src="/assets/blue/500.png" alt="红宝石信息技术网"/></a>
   </div>
 </body>
 </html>
